update architecture diagram

--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -3,7 +3,7 @@ sidebar_position: 1
 title: About NaaVRE
 ---
 
-import ConceptualArchitectureImg from './images/Conceptual_Architecture.png'
+import ConceptualArchitectureImg from './images/Conceptual_Architecture.svg'
 
 NaaVRE (Notebook as a Virtual Research Environment) provide user-centric support in the lifecycle of research activities, for example, discovering and accessing research assets or composing and executing application workflows. The Notebook as a Virtual Research Environment (NaaVRE) platform is a VRE platform developed by LifeWatch VLIC; it allows users to create customizable Collaborative Virtual Labs to conduct domain research activities [1].
 
