update architecture diagram

--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -7,7 +7,10 @@ import ConceptualArchitectureImg from './images/Conceptual_Architecture.svg'
 
 NaaVRE (Notebook as a Virtual Research Environment) provide user-centric support in the lifecycle of research activities, for example, discovering and accessing research assets or composing and executing application workflows. The Notebook as a Virtual Research Environment (NaaVRE) platform is a VRE platform developed by LifeWatch VLIC; it allows users to create customizable Collaborative Virtual Labs to conduct domain research activities [1].
 
-<img src={ConceptualArchitectureImg} max-width="200"/>
+<ConceptualArchitectureImg
+  alt={"NaaVRE conceptual architecture diagram"}
+  width={"inherit"}
+/>
 
 1. Zhao, Zhiming, Spiros Koulouzis, Riccardo Bianchi, Siamak Farshidi, Zeshun Shi, Ruyue Xin, Yuandou Wang et al. "Notebook‐as‐a‐VRE (NaaVRE): From private notebooks to a collaborative cloud virtual research environment." Software: Practice and Experience 52, no. 9 (2022): 1947-1966. https://doi.org/10.1002/spe.3098
 
