--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -85,7 +85,8 @@ You now see the NaaVRE interface in Jupyter lab.
 
 Create a new Python or a R notebook by clicking on the 'Python 3' or the 'R' icon under 'Notebook' on the launcher tab.
 
-:::note If the Launcher page is not open, click on the new tab button or 'File->New->New Launcher'.
+:::note
+If the Launcher page is not open, click on the new tab button or 'File->New->New Launcher'.
 :::
 
 
@@ -180,7 +181,7 @@ Drag and drop the two cells onto the canvas, as well as a 'splitter' cell.
 
 Connect the cells nodes.
 
-:::note
+:::tip
 It is important to note that the direction of the connections between the cells is important as it indicates the flow of ]
 data dependencies between the cells. Therefore, the flow should be: 'Input list' -> 'Splitter' -> 'Process list'.
 :::
