add icos notebook example

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -213,3 +213,63 @@ This will take you to the workflow engine page where you can see the progress of
 :::note
 The first time you open the workflow engine, select the 'single sign-on' login, and close the welcome message.
 :::
+
+
+## A more realistic example
+
+:::tip
+
+This example is part of the EGU [SC5.19: Mastering Environmental Research through FAIR Data Integration, VREs and Open Science](https://meetingorganizer.copernicus.org/EGU24/session/49515).
+
+:::
+
+We present a more realistic workflow using data from ICOS:
+
+- list stations matching given criteria
+- list data products matching given criteria for these stations
+- plot a specific variable for these data products
+- save the plots
+
+### Run it yourself
+
+**Step 1** Open the example notebook in NaaVRE by following [this link](https://naavre.lifewatch.dev/vl-openlab/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2FQCDIS%2Flifewatch-notebooks&urlpath=lab%2Ftree%2Flifewatch-notebooks%2FICOS-demo%2Fegu24-icos-naavre.ipynb&branch=main).
+
+![ICOS example](./images/10_example_icos_1.png)
+
+**Step 2** Fill-in the values for `param_cpauth_token` (cell 2), `param_s3_user_prefix`, `param_s3_access_key`, and `param_s3_secret_key` (cell 6). The s3 params and the “Upload files” step can be skipped if you want to make the tutorial shorter.
+
+After filling in the values, you have the possibility to run the notebook.
+
+![ICOS example](./images/10_example_icos_2.png)
+
+**Step 3** Containerize the cells of the notebook (see [“Containerize the cells”](#containerize-the-cells) in the above tutorial).
+
+![ICOS example](./images/10_example_icos_3.png)
+
+**Step 4** Create a workflow (see [“Compose a workflow”](#compose-a-workflow)) using the cells you just containerized, in the following order:
+- List ICOS stations
+- List data products
+- Splitter
+- Plot time series
+- Merger (optional)
+- Upload files (optional)
+
+![ICOS example](./images/10_example_icos_4.png)
+
+**Step 5** Run the workflow:
+
+1. Click on the “Run” button
+2. Fill in the workflow parameters by clicking on the “Use notebook values” button. Notice that you can edit the parameters at this stage, without having to re-containerize the cells or re-create the workflow.
+3. Click on “Execute”
+
+![ICOS example](./images/10_example_icos_5.png)
+
+**Step 6** Monitor the workflow execution (see [“Monitor the workflow”](#monitor-the-workflow))
+
+![ICOS example](./images/10_example_icos_6.png)
+
+**Step 7** Retrieve the results
+
+If you used the “Upload files” cell, you can retrieve the results that have been uploaded to the MinIO server.
+
+![ICOS example](./images/10_example_icos_7.png)
