--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -4,6 +4,7 @@ sidebar_position: 2
 import TOCInline from '@theme/TOCInline';
 import ReactPlayer from 'react-player'
 import tutorialVideoURL from './videos/GettingStartedVRE.mp4';
+import icosVideoURL from './videos/NaaVREICOSDemo.mp4';
 
 
 # Getting Started with NaaVRE tutorial
@@ -229,6 +230,8 @@ We present a more realistic workflow using data from ICOS:
 - list data products matching given criteria for these stations
 - plot a specific variable for these data products
 - save the plots
+
+<ReactPlayer controls width='100%' height='auto' url={icosVideoURL} />
 
 ### Run it yourself
 
