#271 Use titles, reorder pages, fix links

--- a/docs/readiness_levels/L0_conceptual_proposal.mdx
+++ b/docs/readiness_levels/L0_conceptual_proposal.mdx
@@ -1,4 +1,7 @@
-## L0 - Conceptual proposal
+---
+sidebar_position: 1
+title: L0 - Conceptual proposal
+---
 The idea of a new virtual lab is spawned by a domain scientist. They pitch the idea to the NaaVRE DevOps team.
 If a NaaVRE virtual lab seems the best platform to conduct the research,
 the domain scientist and NaaVRE DevOps team work out the idea further, recruit a team of core developers,
