--- a/docs/readiness_levels/L1_co-development.mdx
+++ b/docs/readiness_levels/L1_co-development.mdx
@@ -1,6 +1,7 @@
-## L1 - Co-development
-
-### During co-development
+---
+sidebar_position: 1
+title: L1 - Co-development
+---
 Where possible, do the following while building the virtual lab:
 
 * Security
@@ -29,7 +30,7 @@ source code and other assets. We recommend starting with reviews early on in the
 * Virtual research environment (VRE) development and operations engineers: Support the creation of the new virtual lab
 by giving the core development team advice and changing the virtual research environment where necessary.
 
-#### Co-development milestone
+#### Co-development milestones
 Two milestones should be reached during co-development:
 
 * The publication of the metadata.
