--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -1,6 +1,7 @@
-## L2 - Validation phase
-
-### During the validation phase
+---
+sidebar_position: 1
+title: L2 - Validation phase
+---
 Besides running scenarios in the virtual lab, the following should be done per category during the validation phase:
 
 * Data
