--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -1,6 +1,7 @@
-## L3 - Workshop use
-
-### During workshop use
+---
+sidebar_position: 1
+title: L3 - Workshop use
+---
 The following should be done during workshop use:
 
 * Documentation
