--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -1,6 +1,7 @@
-## L4 - Operational service
-
-### During operational service
+---
+sidebar_position: 1
+title: L4 - Operational service
+---
 The following should be done during operational service:
 
 * Expand and adapt the virtual lab where useful or necessary.
