--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -60,11 +60,11 @@ We discern five readiness levels in the development of a virtual lab.
 For each higher readiness level improvements are be made to the assets and documents in order to make the lab usable by others
 with an increasing amount of independence from the virtual lab core developers and VRE DevOps team.
 
-* [L0 - Conceptual proposal](conceptual_proposal): A researcher pitches an idea to the NaaVRE DevOps team. Plans are made to create a new virtual lab.
-* [L1 - Co-development](co-development): This is the beginning of the development of new data processing, data analysis, or simulation tools in NaaVRE or the conversion of legacy code from a different platform to NaaVRE.
-* [L2 - Validation](validation_phase): The virtual lab owner uses the virtual lab to run their scientific scenarios to publish a paper.
-* [L3 - Workshop use](workshop_use): The lab can be used by multiple participants in a workshop, training, or hackathon under the guidance of the virtual lab trainer.
-* [L4 - Operational service](operational_service): The virtual lab is ready for all scientists to create their own instance of the lab for their research.
+* [L0 - Conceptual proposal](readiness_levels/L0_conceptual_proposal): A researcher pitches an idea to the NaaVRE DevOps team. Plans are made to create a new virtual lab.
+* [L1 - Co-development](readiness_levels/L1_co-development): This is the beginning of the development of new data processing, data analysis, or simulation tools in NaaVRE or the conversion of legacy code from a different platform to NaaVRE.
+* [L2 - Validation](readiness_levels/L2_validation_phase): The virtual lab owner uses the virtual lab to run their scientific scenarios to publish a paper.
+* [L3 - Workshop use](readiness_levels/L3_workshop_use): The lab can be used by multiple participants in a workshop, training, or hackathon under the guidance of the virtual lab trainer.
+* [L4 - Operational service](readiness_levels/L4_operational_service): The virtual lab is ready for all scientists to create their own instance of the lab for their research.
 
 |    | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
 |----|---------------------|-------------|-----------------------------|-------|----------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------|
