--- a/docs/readiness_levels/user_manual.mdx
+++ b/docs/readiness_levels/user_manual.mdx
@@ -1,4 +1,7 @@
-## User manual
+---
+sidebar_position: 1
+title: User manual
+---
 The following guidelines can be used to determine the completeness of a user manual.
 
 * The virtual lab is explained from the following viewpoints:
