--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -35,24 +35,24 @@ to create virtual labs.
 Our platform needs contributions from the multiple roles to enable innovative research methods. Some people will only have
 one role for the virtual lab, while others might have multiple of the following roles:
 
-* Virtual lab development roles: Roles involved in the creation of a new virtual lab.
-  * Virtual lab owner / Principal investigator: Coordinates the development of the virtual lab with a scientific vision.
+* **Virtual lab development roles:** Roles involved in the creation of a new virtual lab.
+  * **Virtual lab owner / Principal investigator:** Coordinates the development of the virtual lab with a scientific vision.
   This will often be the golden user, i.e. the person that provides the initial publishable use case of the virtual lab.
-  * Virtual lab core developers: Develop a new virtual lab in NaaVRE. Often the virtual lab owner will be one of the core developers.
-  * Virtual lab code reviewers: Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
+  * **Virtual lab core developers:** Develop a new virtual lab in NaaVRE. Often the virtual lab owner will be one of the core developers.
+  * **Virtual lab code reviewers:** Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
   source code and other assets.
-* Virtual lab usage roles: Roles of people who use an existing virtual lab for their own research.
-  * Virtual lab user: Researchers that couple virtual labs assets, and run their own scenarios in the virtual lab by using their own data and parameters.
-  * Virtual lab asset developer: Users who, besides coupling assets and running scenarios, expand and adapt the source code
+* **Virtual lab usage roles:** Roles of people who use an existing virtual lab for their own research.
+  * **Virtual lab user:** Researchers that couple virtual labs assets, and run their own scenarios in the virtual lab by using their own data and parameters.
+  * **Virtual lab asset developer:** Users who, besides coupling assets and running scenarios, expand and adapt the source code
   within their own copy of the virtual lab to suit their needs. In the virtual labs the distinction between development
   and use is a continuum. How many changes a scientist will make to the codebase and libraries depends on whether the virtual lab already has the necessary assets for the user.
-  * Virtual lab visitor: Visits the virtual lab to see how experiments were done and what is possible in the virtual lab.
-* Virtual lab support roles: Roles to support development and use of virtual labs.
-  * Virtual lab trainer: Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
-  * Virtual lab technical coordinator: Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
-  * Virtual lab service operator: Can support users. Knows the potential and limitations of the lab and can help out when problems arise.
-  * Virtual research environment development and operations (VRE DevOps) engineer: Maintains NaaVRE. Often, this will be an employee at LifeWatch ERIC VLIC.
-  * Networked infrastructures scientist: Contribute state-of-the-art components to the NaaVRE and can publish technical papers
+  * **Virtual lab visitor:** Visits the virtual lab to see how experiments were done and what is possible in the virtual lab.
+* **Virtual lab support roles:** Roles to support development and use of virtual labs.
+  * **Virtual lab trainer:** Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
+  * **Virtual lab technical coordinator:** Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
+  * **Virtual lab service operator:** Can support users. Knows the potential and limitations of the lab and can help out when problems arise.
+  * **Virtual research environment development and operations (VRE DevOps) engineer:** Maintains NaaVRE. Often, this will be an employee at LifeWatch ERIC VLIC.
+  * **Networked infrastructures scientist:** Contribute state-of-the-art components to the NaaVRE and can publish technical papers
   that demonstrate the relevance of NaaVRE in the field of networked systems.
 
 ## Readiness levels
@@ -66,13 +66,13 @@ with an increasing amount of independence from the virtual lab core developers a
 * [L3 - Workshop use](readiness_levels/L3_workshop_use): The lab can be used by multiple participants in a workshop, training, or hackathon under the guidance of the virtual lab trainer.
 * [L4 - Operational service](readiness_levels/L4_operational_service): The virtual lab is ready for all scientists to create their own instance of the lab for their research.
 
-|    | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
-|----|---------------------|-------------|-----------------------------|-------|----------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------|
-| L0 | Conceptual proposal | 1-12 months | 0                           | 0     |                                  | A good idea & Available resources.                                     | Set up a concrete lab on the platform.                                             |
-| L1 | Co-development      | 3-6 months  | A team of core developers   | 0     | Metadata publication             | A lab & a core development team.                                       | A lab ready for scientific experiments.                                            |
-| L2 | Validation phase    | 3 months    | A team of core developers   | 1     | Paper publication                | A lab ready for writing a scientific paper.                            | One or two papers submitted to publication.                                        |
-| L3 | Workshop use        | 3 months    | 10-25 workshop participants | 10-25 | Workshops, trainings, hackathons | A working lab with documentation and training material.                | The lab has been tested in workshops / hackathons, and has an emerging  community. |
-| L4 | Operational service |             | 10 ≤ asset developers       | 10+   |                                  | The lab is operational, and can be managed on research infrastructure. |                                                                                    |
+| Level | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
+|-------|---------------------|-------------|-----------------------------|-------|----------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------|
+| L0    | Conceptual proposal | 1-12 months | 0                           | 0     |                                  | A good idea & Available resources.                                     | Set up a concrete lab on the platform.                                             |
+| L1    | Co-development      | 3-6 months  | A team of core developers   | 0     | Metadata publication             | A lab & a core development team.                                       | A lab ready for scientific experiments.                                            |
+| L2    | Validation phase    | 3 months    | A team of core developers   | 1     | Paper publication                | A lab ready for writing a scientific paper.                            | One or two papers submitted to publication.                                        |
+| L3    | Workshop use        | 3 months    | 10-25 workshop participants | 10-25 | Workshops, trainings, hackathons | A working lab with documentation and training material.                | The lab has been tested in workshops / hackathons, and has an emerging  community. |
+| L4    | Operational service |             | 10 ≤ asset developers       | 10+   |                                  | The lab is operational, and can be managed on research infrastructure. |                                                                                    |
 
 Table 1: Summary of readiness levels, with duration, number of developers and users,
 how the context of the lab is communicated with the outside world, and what conditions per transition should be met.
