--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -60,11 +60,11 @@ We discern five readiness levels in the development of a virtual lab.
 For each higher readiness level improvements are be made to the assets and documents in order to make the lab usable by others
 with an increasing amount of independence from the virtual lab core developers and VRE DevOps team.
 
-* [L0 - Conceptual proposal](readiness_levels/L0_conceptual_proposal): A researcher pitches an idea to the NaaVRE DevOps team. Plans are made to create a new virtual lab.
-* [L1 - Co-development](readiness_levels/L1_co-development): This is the beginning of the development of new data processing, data analysis, or simulation tools in NaaVRE or the conversion of legacy code from a different platform to NaaVRE.
-* [L2 - Validation](readiness_levels/L2_validation_phase): The virtual lab owner uses the virtual lab to run their scientific scenarios to publish a paper.
-* [L3 - Workshop use](readiness_levels/L3_workshop_use): The lab can be used by multiple participants in a workshop, training, or hackathon under the guidance of the virtual lab trainer.
-* [L4 - Operational service](readiness_levels/L4_operational_service): The virtual lab is ready for all scientists to create their own instance of the lab for their research.
+* [L0 - Conceptual proposal](readiness_levels/L0_conceptual_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup.
+* [L1 - Co-development](readiness_levels/L1_co-development): A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments.
+* [L2 - Validation](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications..
+* [L3 - Workshop use](readiness_levels/L3_workshop_use): A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. .
+* [L4 - Operational service](readiness_levels/L4_operational_service): A provisioned virtual lab on operational infrastructure. It is ready to be operational for serving users from the general public.
 
 | Level | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
 |-------|---------------------|-------------|-----------------------------|-------|----------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------|
