#271 Rename conceptual -> Initial proposal, adapt figure

--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -60,15 +60,15 @@ We discern five readiness levels in the development of a virtual lab.
 For each higher readiness level improvements are be made to the assets and documents in order to make the lab usable by others
 with an increasing amount of independence from the virtual lab core developers and VRE DevOps team.
 
-* [L0 - Conceptual proposal](readiness_levels/L0_conceptual_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup.
+* [L0 - Initial proposal](readiness_levels/L0_initial_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup.
 * [L1 - Co-development](readiness_levels/L1_co-development): A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments.
-* [L2 - Validation](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications..
+* [L2 - Validation phase](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications..
 * [L3 - Workshop use](readiness_levels/L3_workshop_use): A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. .
 * [L4 - Operational service](readiness_levels/L4_operational_service): A provisioned virtual lab on operational infrastructure. It is ready to be operational for serving users from the general public.
 
 | Level | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
 |-------|---------------------|-------------|-----------------------------|-------|----------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------|
-| L0    | Conceptual proposal | 1-12 months | 0                           | 0     |                                  | A good idea & Available resources.                                     | Set up a concrete lab on the platform.                                             |
+| L0    | initial proposal    | 1-12 months | 0                           | 0     |                                  | A good idea & Available resources.                                     | Set up a concrete lab on the platform.                                             |
 | L1    | Co-development      | 3-6 months  | A team of core developers   | 0     | Metadata publication             | A lab & a core development team.                                       | A lab ready for scientific experiments.                                            |
 | L2    | Validation phase    | 3 months    | A team of core developers   | 1     | Paper publication                | A lab ready for writing a scientific paper.                            | One or two papers submitted to publication.                                        |
 | L3    | Workshop use        | 3 months    | 10-25 workshop participants | 10-25 | Workshops, trainings, hackathons | A working lab with documentation and training material.                | The lab has been tested in workshops / hackathons, and has an emerging  community. |
@@ -79,7 +79,7 @@ how the context of the lab is communicated with the outside world, and what cond
 
 ![ images/NaaVRE_development_cycle.drawio.png not found](images/NaaVRE_development_cycle.drawio.png)
 
-Figure1: The virtual lab moves through the readiness levels, from conceptual proposal to operational service.
+Figure1: The virtual lab moves through the readiness levels, from initial proposal to operational service.
 Users coming up with ideas for new experiments that can not be done in the existing virtual labs,
 can, in collaboration with LifeWatch, create a new virtual lab that fits their needs.
 
