--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -1,14 +1,14 @@
 ---
 sidebar_position: 1
-title: L0 - Conceptual proposal
+title: L0 - initial proposal
 ---
 The idea of a new virtual lab is spawned by a domain scientist. They pitch the idea to the NaaVRE DevOps team.
 If a NaaVRE virtual lab seems the best platform to conduct the research,
 the domain scientist and NaaVRE DevOps team work out the idea further, recruit a team of core developers,
 and establish a timeline for the virtual lab.
 
-### During the conceptual proposal phase
-The following things should be done to work out the conceptual proposal to a concrete virtual lab:
+### During the initial proposal phase
+The following things should be done to work out the initial proposal to a concrete virtual lab:
 
 * Feasibility
   * Check if the idea research activity can be done in NaaVRE.
@@ -27,21 +27,21 @@ you can pick another license. We recommend having a look at https://choosealicen
 * Documentation
   * Pick a nice name for your virtual lab. Make sure the name won't be mixed up with other virtual labs.
 
-### Conceptual proposal responsibilities
-The following roles are involved in a conceptual proposal:
+### Initial proposal responsibilities
+The following roles are involved in a initial proposal:
 
 * Virtual lab owner / Principal investigator: Comes with a use case that will serve as the first application of the virtual lab.
 Recruits a core development team.
 * VRE DevOps engineer: Establish if NaaVRE can support to use case. Create an empty new virtual lab.
 
-### Conceptual proposal milestones
+### Initial proposal milestones
 The following milestones can be achieved during the phase L0 of virtual lab development:
 
 * The core development team becomes complete.
 * The creation of a new empty virtual lab.
 
-### From conceptual proposal to co-development
-To transition from conceptual proposal to co-development the following should be done:
+### From initial proposal to co-development
+To transition from initial proposal to co-development the following should be done:
 
 * Timeline
   - [ ] A timeline exists for the co-development, validation of the virtual lab and development of training material.
